--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
+        "laravel/reverb": "^1.5",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "picqer/php-barcode-generator": "^3.2",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
